--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -27,12 +27,14 @@
 <script src="{% static 'js/mdb.min.js' %}"></script>
 <script src="{% static 'js/sweetalert2.min.js' %}"></script>
 <script src="{% static 'js/script.js' %}"></script>
-<script>
-    $(function () {
-        $('#{{ tab }}').addClass('active');
-        $('#{{ tab }} a').attr('href', '#');
-    });
-</script>
+{% if tab %}
+    <script>
+        $(function () {
+            $('#{{ tab }}').addClass('active');
+            $('#{{ tab }} a').attr('href', '#');
+        });
+    </script>
+{% endif %}
 {% block script %}{% endblock %}
 </body>
 </html>
