--- a/lending/templates/lending/student_list.html
+++ b/lending/templates/lending/student_list.html
@@ -5,54 +5,57 @@
 {% endblock %}
 
 {% block main %}
-    <!-- Formulario de busqueda-->
-    <div class="row">
-        <form method="get" class="form-inline">
-            <!-- Campo de busqueda-->
-            <div class="md-form">
-                <input type="text" name="q" id="query" class="form-control">
-                <label for="query"></label>
-            </div>
-            <!-- Campo de busqueda-->
-            <!-- Campo de tipo de busqueda-->
-            <div class="md-form">
-                <select name="type" id="type" class="form-control">
-                    <option value="name">Nombre</option>
-                    <option value="last_name">Apellidos</option>
-                    <option value="number">N&uacute;mero</option>
-                </select>
-                <label for="type"></label>
-            </div>
-            <!-- Campo de tipo de busqueda-->
-            <!-- Boton de buscar-->
-            <div class="md-form">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Buscar</button>
-            </div>
-            <!-- Boton de buscar-->
-        </form>
-    </div>
-    <!-- Formulario de busqueda-->
     <div class="row">
         <div class="col-6">
-            <table>
-                <tr>
-                    <th>N&uacute;mero</th>
-                    <th>Nombre</th>
-                    <th>Apellidos</th>
-                </tr>
-                {% for student in student_list %}
+            <!-- Formulario de busqueda-->
+            <form method="get" class="form-inline">
+                <!-- Campo de busqueda-->
+                <div class="md-form">
+                    <input type="text" name="q" id="query" class="form-control">
+                    <label for="query"></label>
+                </div>
+                <!-- Campo de busqueda-->
+                <!-- Campo de tipo de busqueda-->
+                <div class="md-form">
+                    <select name="type" id="type" class="form-control">
+                        <option value="name">Nombre</option>
+                        <option value="last_name">Apellidos</option>
+                        <option value="number">N&uacute;mero</option>
+                    </select>
+                    <label for="type"></label>
+                </div>
+                <!-- Campo de tipo de busqueda-->
+                <!-- Boton de buscar-->
+                <div class="md-form">
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Buscar</button>
+                </div>
+                <!-- Boton de buscar-->
+            </form>
+            <!-- Formulario de busqueda-->
+            <div class="row">
+                <table>
                     <tr>
-                        <td><a href="{% url 'lending:student-detail' student.pk %}">{{ student.number }}</a></td>
-                        <td>{{ student.first_name }}</td>
-                        <td>{{ student.last_name }}</td>
+                        <th>N&uacute;mero</th>
+                        <th>Nombre</th>
+                        <th>Apellidos</th>
                     </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="3">No se encuentra ning&uacute;n estudiante con ese criterio de b&uacute;squeda</td>
-                    </tr>
-                {% endfor %}
-            </table>
+                    {% for student in student_list %}
+                        <tr>
+                            <td><a href="{% url 'lending:student-detail' student.pk %}">{{ student.number }}</a>
+                            </td>
+                            <td>{{ student.first_name }}</td>
+                            <td>{{ student.last_name }}</td>
+                        </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="3">No se encuentra ning&uacute;n estudiante con ese criterio de b&uacute;squeda
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
+        <!-- Student Info-->
         <div class="col-6">
             <div class="card">
                 <h5 class="card-header info-color white-text text-center py-4">
@@ -77,7 +80,10 @@
                 <!-- Card footer -->
             </div>
         </div>
+        <!-- Student Info-->
     </div>
+
+
 {% endblock %}
 
 {% block script %}
@@ -89,6 +95,16 @@
             {% if type %}
                 $('#type').val('{{ type }}');
             {% endif %}
+
+            $.ajax('{% url "lending:student-query" %}', {
+                method: 'GET',
+                success: function (a) {
+                    console.log(a['object_list']);
+                },
+                error: function (a) {
+
+                }
+            });
         });
     </script>
 {% endblock %}
