--- a/accounts/static/css/styles.css
+++ b/accounts/static/css/styles.css
@@ -23,3 +23,9 @@ main {
 .go-top:hover {
     background-color: rgba(0, 0, 0, 0.6);
 }
+
+.login {
+    width: 500px;
+    margin-left: 30%;
+    margin-top: 10%;
+}
