--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,54 +5,58 @@
 {% endblock %}
 
 {% block content %}
-    <div class="card">
-        <!-- Material form login -->
-        <h5 class="card-header info-color white-text text-center py-4">
-            <strong>Entrar</strong>
-        </h5>
+    <div class="login">
 
-        <!-- Card content -->
-        <div class="card-body px-lg-5 pt-0">
-            <!-- Form -->
-            <form class="text-center" style="color: #757575;" method="post">
-                {% csrf_token %}
-                <!-- Username -->
-                <div class="md-form">
-                    {{ form.username }}
-                    <label for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
-                </div>
-                <!-- Password -->
-                <div class="md-form">
-                    {{ form.password }}
-                    <label for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
-                </div>
-                <div class="d-flex justify-content-around">
-                    <div>
-                        <!-- Remember me -->
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="remember">
-                            <label for="remember" class="form-check-label">Recuerdame</label>
+        <div class="card">
+            <!-- Material form login -->
+            <h5 class="card-header info-color white-text text-center py-4">
+                <strong>Entrar</strong>
+            </h5>
+
+            <!-- Card content -->
+            <div class="card-body px-lg-5 pt-0">
+                <!-- Form -->
+                <form class="text-center" style="color: #757575;" method="post">
+                    {% csrf_token %}
+                    <!-- Username -->
+                    <div class="md-form">
+                        {{ form.username }}
+                        <label for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
+                    </div>
+                    <!-- Password -->
+                    <div class="md-form">
+                        {{ form.password }}
+                        <label for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
+                    </div>
+                    <div class="d-flex justify-content-around">
+                        <div>
+                            <!-- Remember me -->
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="remember">
+                                <label for="remember" class="form-check-label">Recuerdame</label>
+                            </div>
+                        </div>
+                        <div>
+                            <!-- Forgot password -->
+                            <a href="#">Olvido la contraseña?</a>
                         </div>
                     </div>
-                    <div>
-                        <!-- Forgot password -->
-                        <a href="#">Olvido la contraseña?</a>
-                    </div>
-                </div>
 
-                <!-- Sign in button -->
-                <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">
-                    Entrar
-                </button>
+                    <!-- Sign in button -->
+                    <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0"
+                            type="submit">
+                        Entrar
+                    </button>
 
-                <!-- Register -->
-                <p>No tienes cuenta? <a href="#">Crearmela</a></p>
-            </form>
-            <!-- Form -->
+                    <!-- Register -->
+                    <p><a href="#">No tienes cuenta?</a></p>
+                </form>
+                <!-- Form -->
+            </div>
+            <!-- Card content -->
         </div>
-        <!-- Card content -->
+        <!-- Material form login -->
     </div>
-    <!-- Material form login -->
 {% endblock %}
 
 {% block script %}
