--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -26,7 +26,7 @@
                                aria-haspopup="true" aria-expanded="false">Libros</a>
                             <div class="dropdown-menu dropdown-primary" aria-labelledby="books">
                                 <a href="{% url 'lending:book-list' %}" class="dropdown-item">Listado de libros</a>
-                                <a href="#" class="dropdown-item">A&ntilde;adir un libro</a>
+                                <a href="{% url 'lending:book-create' %}" class="dropdown-item">A&ntilde;adir un libro</a>
                             </div>
                         </li>
                     </ul>
