haciendo el crear, editar y eliminar estudiante

--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -18,7 +18,7 @@
                             <div class="dropdown-menu dropdown-primary" aria-labelledby="students">
                                 <a href="{% url 'lending:student-query' %}" class="dropdown-item">Listado de
                                     estudiantes</a>
-                                <a href="#" class="dropdown-item">A&ntilde;adir un estudiante</a>
+                                <a href="{% url 'lending:student-create' %}" class="dropdown-item">A&ntilde;adir un estudiante</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
