--- a/lending/templates/lending/student_list.html
+++ b/lending/templates/lending/student_list.html
@@ -51,7 +51,6 @@
                             <td>{{ student.last_name }}</td>
                             <td>
                                 <a href="{% url 'lending:student-detail' student.pk %}"><i class="fa fa-eye"></i></a>
-                                <a href="#"><i class="fa fa-edit"></i></a>
                                 <a href="#"><i class="fa fa-remove"></i></a>
                             </td>
                         </tr>
@@ -84,8 +83,8 @@
                 <!-- Card content -->
                 <!-- Card footer -->
                 <div class="card-footer">
-                    <a href="#" class="btn btn-red">Eliminar</a>
-                    <a href="#" class="btn btn-primary">Editar</a>
+                    <a href="#" class="btn btn-red" id="delete">Eliminar</a>
+                    <a href="#" class="btn btn-primary" id="edit">Editar</a>
                 </div>
                 <!-- Card footer -->
             </div>
@@ -131,6 +130,7 @@
                         $('#first-name').html('Nombre: ' + data['first_name']);
                         $('#last-name').html('Apellidos: ' + data['last_name']);
                         $('#student-info').attr('style', 'display: flex');
+                        console.log(data);
                     },
                     error: function (response, status) {
                         swal({
@@ -140,6 +140,7 @@
                         });
                     }
                 });
+                $('#delete').attr('href', '');
             });
         });
     </script>
