--- a/lending/templates/lending/student_list.html
+++ b/lending/templates/lending/student_list.html
@@ -122,8 +122,8 @@
                     },
                     error: function (response, status) {
                         swal({
-                            type: 'Error',
-                            title: status,
+                            type: status,
+                            title: 'Error',
                             text: 'No se pudo obtener la información del estudiante'
                         });
                     }
@@ -178,10 +178,10 @@
                     text: "No podrás recuperar la información",
                     type: 'warning',
                     showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: 'Seguro',
-                    cancelButtonText: 'Cancelar',
+                    confirmButtonClass: 'btn btn-danger',
+                    cancelButtonClass: 'btn btn-default',
+                    confirmButtonText: '<i class="fa fa-trash fa-2x"></i>',
+                    cancelButtonText: '<i class="fa fa-close fa-2x"></i>',
                 }).then((result) => {
                     if (result.value) {
                         $.ajax(href, {
@@ -197,7 +197,12 @@
                                 });
                             },
                             error: function (response, status) {
-
+                                console.log(response);
+                                swal(
+                                    'Error',
+                                    'No se ha podido ejecutar',
+                                    status
+                                );
                             },
                         });
                     }
